# pd-vibe

./: .gitignore  CHANGELOG.md  Makefile  README.md  check_docs.py  pd-docs  pd2ir  pddiff  pdpatch  pyproject.toml  setup.py
.claude/: settings.local.json
.claude/skills/pd-patch/: SKILL.md
.claude/skills/pd-patch/references/: api_reference.md
.claude/skills/pd-patch/scripts/: analyze.sh
data/: objects.cyclone.json  objects.else.json  objects.vanilla.json
pdpy_lib/ir/: __init__.py  analysis.py  build.py  core.py  docgen.py  dsl.py  enrich.py  explain.py  ids.py  index.py  queries.py  registry.py  screenshot.py  state.py  symbols.py  visualize.py
pdpy_lib/objects/: comment.py  obj.py
pdpy_lib/patching/: pdpy.py
scripts/: make_setup.sh
