[project]
name = "pd-vibe"
version ="0.1.7"
authors = [
  { name="Fede Camara Halac", email="fdch@nyu.edu" },
]
description = "Fork of pdpy for vibe-coding Pure Data patches"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Topic :: Multimedia",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BorisMolch/pd-vibe"
"Bug Tracker" = "https://github.com/BorisMolch/pd-vibe/issues"
"Upstream" = "https://github.com/pdpy-org/pdpy"
